--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,17 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
+    signingConfigs {
+        firebase {
+            keyAlias 'firebase'
+            keyPassword 'firebase'
+            storeFile file('/Users/ricardo/Documents/projects/FirebaseAuthDemo/keystore/demo.jks')
+            storePassword 'firebase'
+        }
+    }
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
-
     defaultConfig {
         applicationId "com.rba.firebaseauth"
         minSdkVersion 14
@@ -23,6 +31,8 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.google.firebase:firebase-auth:9.0.2'
     compile 'uk.co.chrisjenx:calligraphy:2.2.0'
     compile 'com.android.support:design:23.4.0'
+    compile 'com.firebase:firebase-client-android:2.3.1'
 }
