--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,8 +32,11 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.google.firebase:firebase-auth:9.0.2'
+    compile 'com.google.firebase:firebase-database:9.0.2'
     compile 'uk.co.chrisjenx:calligraphy:2.2.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.firebase:firebase-client-android:2.3.1'
     compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.android.support:cardview-v7:23.4.0'
 }
